small polishing in acknowledgements.

--- a/master.tex
+++ b/master.tex
@@ -90,7 +90,7 @@ advice. I am deeply indebted to RNDr. Antonín Fejfar, CSc. and Ing. Jiří
 Plešek, CSc. for moral support during my university years and in the
 course of writing this diploma thesis. I also wish to thank Nissy Nevil
 for
-her proofreading and amiable encouragement. Finally, I thank Ing. Robert
+proofreading and her amiable encouragement. Finally, I thank Ing. Robert
 Cimrman, Ph.D. and his sfepy (a finite element package).
 
 \vspace{\fill}
