2D 2D Boron intro added too.

--- a/results.tex
+++ b/results.tex
@@ -237,6 +237,9 @@ Solution saved to mesh.vtk
 
 \subsection{2D: Boron Atom}
 
+The analytic solution is the same as for the hydrogen atom, only with $Z=5$,
+so each energy needs to by multiplied by 25.
+
 \begin{lstlisting}
 $ ./schroedinger.py --boron
 [...]
