Don't advertize QED and QFT in the introduction.

--- a/introduction.tex
+++ b/introduction.tex
@@ -24,8 +24,5 @@ the examples of finite-element method applications for spherically symmetric
 potentials in relativistic and nonrelativistic DFT and for 2D and 3D
 Schr\"odinger equation for symmetric and non-symmetric potentials.
 
-Finally the appendix contains some useful derivations and explanations
-like a thorough derivation of relativistic equations form the quantum
-electrodynamics (QED) and the derivation of QED from the standard model,
-explanation of delta functions, variations, functional derivatives,
-dirac notation and more.
+Finally the appendix contains some useful derivations and explanations like
+delta functions, variations, functional derivatives, dirac notation and more.
