12% changed to 0.02 Hartrees

--- a/results.tex
+++ b/results.tex
@@ -606,7 +606,9 @@ potential.
 6p( 2) j=l-1/2: -0.1549640727
 \end{lstlisting}
 
-This is agrees within $12\%$ to the NIST reference calculation\cite{nist}, the
+Most of the states above agree with the NIST reference calculation\cite{nist}
+to one decimal place after the floating point (for example the 6p state differs
+by 0.02 Hartees, the 1p state by 0.04 Hartrees), the
 difference being caused probably by a different exchange and correlation
 potential approximation in our code and NIST. We are using the exchange and
 correlation potential proposed by MacDonald and Vosko, see the equation
