--- a/README
+++ b/README
@@ -1,8 +1,6 @@
 Compilation
 ===========
 
-wajig install texlive texlive-lang-czechslovak texlive-formats-extra texlive-generic-recommended texlive-fonts-extra
-
 $ make
 
-this will create a "master.ps" in this directory.
+this will create a "master.pdf" in this directory.
