--- a/results.tex
+++ b/results.tex
@@ -567,11 +567,12 @@ potential.
 
 Most of the states above agree with the NIST reference calculation\cite{nist}
 to one decimal place after the floating point (for example the 6p state differs
-by 0.02 Hartees, the 1p state by 0.04 Hartrees), the
-difference being caused probably by a different exchange and correlation
-potential approximation in our code and NIST. We are using the exchange and
-correlation potential proposed by MacDonald and Vosko, see the equation
-(\ref{RLDA}) and the discussion leading to it.
+by 0.02 Hartees, the 1p state by 0.04 Hartrees), the difference probably being
+caused either by a different radial grid (we used a hyperbolic grid with 10000
+points), or by a different implementation of the exchange and correlation
+potential approximation (both our code and NIST uses the potential proposed by
+MacDonald and Vosko). In particular, we implemented the equation (\ref{RLDA}),
+see also the discussion leading to it.
 
 \subsection{B: LDA}
 
@@ -635,6 +636,5 @@ Finally we calculate a relativistic Boron.
 2p( 1) j=l-1/2: -0.1366103284
 \end{lstlisting}
 
-Agrees with NIST\cite{nist} to 3 decimal places after the decimal dot, the
-difference also probably causes by a different exchange and correlation
-potential approximation, see the comments at the relativistic lead above.
+Agrees with NIST\cite{nist} to 3 decimal places after the decimal dot, see the
+comments at the relativistic Lead above for a discussion why it is different.
