Another explanation paragrapha added for the energy discrepancy.

--- a/results.tex
+++ b/results.tex
@@ -574,6 +574,13 @@ potential approximation (both our code and NIST uses the potential proposed by
 MacDonald and Vosko). In particular, we implemented the equation (\ref{RLDA}),
 see also the discussion leading to it.
 
+However, if you compare for example the energies of the 1s state in
+the relativistic (-3209.51946 Hartrees) an non relativistic calculation
+(-2901.078061 Hartrees), the difference is about 308.44 Hartrees and both
+energies agree with NIST (relativistic up to 0.04 Hartrees, nonrelativistic up
+to $10^{-6}$ Hartrees, e.g. all decimal places showed at NIST), so it is clear,
+that whatever causes the small difference, it is not a major problem.
+
 \subsection{B: LDA}
 
 We calculate nonrelativistic Boron.
