--- a/master.tex
+++ b/master.tex
@@ -82,16 +82,16 @@ Institute of Theoretical Physics\\ % doplňte název katedry či ústavu
 \setcounter{page}{2}
 \ \vspace{10mm}
 
-\noindent I would like to thank my supervisor RNDr. Jiří Vackář, CSc. for
-his time spent in countless discussions enlightening me on a lot of issues in
-quantum mechanics and helping with this work. I thank RNDr. Ondřej
-Šipr, CSc. for explaining me a number of theoretical problems and general
-advice. I am deeply indebted to RNDr. Antonín Fejfar, CSc. and Ing. Jiří
-Plešek, CSc. for moral support during my university years and in the
-course of writing this diploma thesis. I also wish to thank Nissy Nevil
-for
-proofreading and her amiable encouragement. Finally, I thank Ing. Robert
-Cimrman, Ph.D. and his sfepy (a finite element package).
+\noindent I would like to thank my supervisor RNDr. Jiří Vackář, CSc. for his
+time spent in countless discussions enlightening me on a lot of issues in
+quantum mechanics and helping with this work. I thank RNDr. Ondřej Šipr, CSc.
+for explaining me a number of theoretical problems and general advice. I am
+deeply indebted to RNDr. Antonín Fejfar, CSc. and Ing. Jiří Plešek, CSc. for
+moral support during my university years and in the course of writing this
+diploma thesis. I also wish to thank Nissy Nevil for proofreading and her
+amiable encouragement. Finally, I thank Ing. Robert Cimrman, Ph.D. and his
+sfepy (a finite element package) and ass. prof. Pavel Šolín, Ph.D. for the
+feedback and help with finite elements.
 
 \vspace{\fill}
 \noindent I declare that I wrote the thesis by myself and listed all used
