First comments fixed.

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -18,4 +18,4 @@ there and working.
 
 In the future work, what needs to be done is to take our DFT self-consistency
 engine tested on the radial Dirac / Schr\"odinger problem and apply our finite
-element solver for Kohn-Shams equations with separable pseudopotentials.
+element solver for Kohn-Sham equations with separable pseudopotentials.
