--- a/motivation.tex
+++ b/motivation.tex
@@ -80,7 +80,7 @@ basis set, using the separable form is necessary.
 
 In combination with the finite element method, the pseudopotentials improve the
 efficiency of complex system calculations in essential and extremely
-singificant way as a consequence of several mechanisms:
+significant way as a consequence of several mechanisms:
 \begin{itemize}
 
 \item By treating the core electrons separately in the pseudopotential
@@ -104,7 +104,7 @@ numerical precision.
 
 \item Pseudopotentials eliminate high potential gradients and Coulomb potential
 singularities, which significantly reduces the density of finite-element mesh
-that is necesary for achieving well converged accurate results. By that, the
+that is necessary for achieving well converged accurate results. By that, the
 efficiency can be significantly improved, particularly in the tasks like
 molecular dynamics calculations.
 
