--- a/motivation.tex
+++ b/motivation.tex
@@ -88,7 +88,7 @@ generation process, the need to include them into the most computationaly
 expensive DFT selfconsistency iterative process is eliminated.  The fact that
 the core electrons do not participate in this process significantly reduces the
 number of electronic states and, by that, reduces the number of eigenvectors
-that have to be found in each step iteratively repeted until the eigenvectors
+that have to be found in each step iteratively repeated until the eigenvectors
 satisfy the DFT selfconsistency condition.
 
 \item The relativistic effect can be taken into account just for the core
