--- a/results.tex
+++ b/results.tex
@@ -368,10 +368,10 @@ eigenvector 10, see the figs \ref{fig:osc3d5} -- \ref{fig:osc3d10}.
 plane}
 
 \fig{images/osc3d5c.png}{fig:osc3d5c}{3D oscillator: eigenvector 5, cut
-plane and countour}
+plane and contour}
 
 \fig{images/osc3d5c2.png}{fig:osc3d5c2}{3D oscillator: eigenvector 5,
-countour}
+contour}
 
 \fig{images/osc3d10.png}{fig:osc3d10}{3D oscillator: eigenvector 10, cut
 plane and contour}
@@ -465,7 +465,7 @@ compare with. We use \cite{nist}, that contains both relativistic and
 non-relativistic Kohn-Sham eigenvalues for every atom. See the section 3.1 for
 thorough introduction and derivation of all needed equations, so let's just
 briefly recapitulate: the potential for atoms is spherically symmetric, so the
-Kohn-Sham equations effectivaly become radial Schr\"odinger or Dirac
+Kohn-Sham equations effectively become radial Schr\"odinger or Dirac
 equations, that is solved on a radial grid using the methods described in the
 section 3.1.
 
