--- a/introduction.tex
+++ b/introduction.tex
@@ -12,7 +12,7 @@ The related theory and full ab-initio derivation of all the equations
 in finite elements, density functional theory and pseudopotentials
 are summarized in Chapter 3.
 This chapter is split into parts describing the basic ingredients of our
-recently developed method: the subsections 3.1. -- 3.4. deal, respectively,
+recently developed method: the subsections 3.1. -- 3.4. deal respectively,
 with Dirac and Schr\"odinger equations, with the density functional theory and
 Kohn-Sham equations, with ab-initio pseudopotentials including their separable
 form, and with the finite element method.
