poisson equation -> Poisson's equation.

--- a/motivation.tex
+++ b/motivation.tex
@@ -62,7 +62,7 @@ See the section 3.1 for thorough derivation of all equations in DFT and
 explanation how everything works. It is useful to note here, that for
 spherically symmetric problems (for example atoms), all that is needed is
 to have a radial Schr\"odinger or Dirac solver and that's exactly what we did
-to test the DFT self-consistency cycle, poisson equation, exchange and
+to test the DFT self-consistency cycle, Poisson's equation, exchange and
 correlation potential and other things, see the section 3.1 for theory and
 section 4.2 for results of calculations for Boron and Lead.
 
