--- a/results.tex
+++ b/results.tex
@@ -521,7 +521,7 @@ more details). The rest of the output are individual Kohn-Sham energies.
 The NIST reference calculation\cite{nist} has precision of 6 decimal places and
 the above calculation agrees with it to every decimal digit.
 This shows, that our implementation of the density functional theory cycle,
-poisson equation, LDA and other things is correct.
+Poisson's equation, LDA and other things is correct.
 
 \subsection{Pb: RLDA}
 
