--- a/results.tex
+++ b/results.tex
@@ -1,6 +1,10 @@
 In this section we show results of our program. The program is opensource (BSD
 licensed) and available at \url{http://sfepy.org}, use the release 00.50.00 to
-get the exact results as below.
+get the results as below.
+
+In most examples we present also an exact analytic solution (in the column
+denoted as "exact"). The particular way of obtaining the analytic results is
+described at each individual example.
 
 \section{Solution of the Schr\"odinger Equation}
 
