--- a/master.tex
+++ b/master.tex
@@ -90,7 +90,7 @@ deeply indebted to RNDr. Antonín Fejfar, CSc. and Ing. Jiří Plešek, CSc. for
 moral support during my university years and in the course of writing this
 diploma thesis. I also wish to thank Nissy Nevil for proofreading and her
 amiable encouragement. Finally, I thank Ing. Robert Cimrman, Ph.D. and his
-sfepy (a finite element package) and ass. prof. Pavel Šolín, Ph.D. for the
+sfepy (a finite element package) and RNDr. Pavel Šolín, Ph.D. for the
 feedback and help with finite elements.
 
 \vspace{\fill}
