--- a/methods.tex
+++ b/methods.tex
@@ -1,92 +1,137 @@
 \section{Finite Element Method}
 
-Finite element method (FEM) is a general method for solving partial
-differential equations. Below we explain how to apply it to the Schr\"odinger
-equation.
+The finite element method (FEM) is the most widely used technique for solving partial
+differential equations (PDE). In this section we explain how it can be applied to the 
+Schr\"odinger equation.
 
 \subsection{Weak Formulation of the Schr\"odinger Equation}
 
-One particle Schrödinger equation is
-\begin{equation}
-  \left(-{\hbar^2\over2m}\nabla^2 + V\right)\psi=E\psi\,.\label{schPDE}
+One-particle Schr\"odinger equation has the form
+\begin{equation}\label{schPDE}
+  \left(-\frac{\hbar^2}{2m}\nabla^2 + V \right) \psi=E\psi\ \ \ \mbox{in}\ \Omega,
 \end{equation}
-We multiply both sides by a test function $v$
-\begin{equation*}
-  -\left({\hbar^2\over2m}\nabla^2\psi\right)v=(E-V)\psi v\,,
-\end{equation*}
-and integrate over the whole volume $\Omega$ we are interested in
+where $\Omega$ is a Cartesian square (in 2D) or cube (in 3D) 
+centered at the origin of the coordinate 
+system. The domain is chosen sufficiently large so that the decay of $\psi$
+allows us to prescribe zero Dirichlet conditions on the boundary $\Gamma$.
+Here $V$ is a given function in $\Omega$ representing the potential well.
+
+We multiply both sides of (\ref{schPDE}) by a test function $v$
+that is zero on $\Gamma$ and integrate over $\Omega$,
 \begin{equation}
-  \int-\left({\hbar^2\over2m}\nabla^2\psi\right)v\,\d V=\int(E-V)\psi v\,\d V\,,  \label{1}
+  \int_{\Omega}-\left({\hbar^2\over2m}\nabla^2\psi\right)v\,\d V=\int_{\Omega}(E-V)\psi
+v\,\d V\,.  \label{1}
 \end{equation}
-the usual treatment in the finite element method is to apply the first Green's
-identity, but it is useful to do things explicitely to better understand what
-is going on, so we apply the following vector identity
-\begin{equation*}
-  -\left(\nabla^2\psi\right)v=\nabla \psi\cdot \nabla v - \nabla\cdot\left((\nabla \psi)v\right),
-\end{equation*}
-we rewrite the left hand side of (\ref{1})
-\begin{equation*}
-  \int{\hbar^2\over2m}\nabla\psi\cdot\nabla v\,\d V=\int(E-V)\psi v\,\d V+\int{\hbar^2\over2m}\nabla\cdot\left((\nabla \psi)v\right)\,\d V\,,
-\end{equation*}
-now we apply Gauss Theorem
-\begin{equation*}
-  \int{\hbar^2\over2m}\nabla\psi\cdot\nabla v\,\d V=\int(E-V)\psi v\,\d V+\oint{\hbar^2\over2m}(\nabla \psi)v\cdot{\bf n}\,\d S\,,
-\end{equation*}
-and rewriting $\nabla\psi\cdot{\bf n}\equiv{\d\psi\over\d n}$
-\begin{equation}
-  \int{\hbar^2\over2m}\nabla\psi\cdot\nabla v\,\d V+ \int vV\psi\,\d V = \int E\psi v\,\d V + \oint{\hbar^2\over2m}{\d\psi\over\d n}v\,\d S\,,  \label{w}
-\end{equation}
+%the usual treatment in the finite element method is to apply the first Green's
+%identity, but it is useful to do things explicitely to better understand what
+%is going on, so we apply the following vector identity
+%$$
+%  -\left(\nabla^2\psi\right)v=\nabla \psi\cdot \nabla v -
+%\nabla\cdot\left((\nabla \psi)v\right),
+%$$
+%we rewrite the left hand side of (\ref{1})
+%$$
+%  \int{\hbar^2\over2m}\nabla\psi\cdot\nabla v\,\d V=\int(E-V)\psi
+%v\,\d V+\int{\hbar^2\over2m}\nabla\cdot\left((\nabla \psi)v\right)\,\d
+%V\,,
+%$$
+%now we apply Gauss Theorem
+Applying to the left-hand side 
+the Green's first identity (generalized integration by parts formula), 
+we obtain 
+$$
+  \int_{\Omega}{\hbar^2\over2m}\nabla\psi\cdot\nabla v\,\d V=\int_{\Omega}(E-V)\psi
+v\,\d V+\oint_{\Gamma}{\hbar^2\over2m}(\nabla \psi)v\cdot{\bf n}\,\d S\,.
+$$
+%and rewriting $\nabla\psi\cdot{\bf n}\equiv{\d\psi\over\d n}$
+%\begin{equation}
+%  \int{\hbar^2\over2m}\nabla\psi\cdot\nabla v\,\d V+ \int vV\psi\,\d V
+%= \int E\psi v\,\d V + \oint{\hbar^2\over2m}{\d\psi\over\d n}v\,\d
+%S\,,  \label{w}
+%\end{equation}
+Since $v \equiv 0$ on $\Gamma$, the integral over $\Gamma$ vanishes and 
+we obtain the following weak formulation of (\ref{schPDE}):
 \def\S{S}
-which is the weak formulation of (\ref{schPDE}). The problem reads: find a
-function $\psi\in\S$ such that (\ref{w}) holds for every $v\in\S$. Where $\S$
-is a subspace of $H^1(\Omega)$, the exact form of $\S$
-depends on the boundary conditions we choose.
-$H^1(\Omega)$ are all functions from $L^2$ whose derivatives are
-also from $L^2$, where $L^2$ are square integrable functions.
-
-\subsection{Finite Elements}
-
-We choose a basis $\phi_i$ (see below for more detailed specification of the
-function space this basis lives in) and substitute $\phi_i$ for $v$ and expand
-$\psi=\sum q_j\phi_j$
-\begin{equation}
-  \left(\int{\hbar^2\over2m}\nabla\phi_j\cdot\nabla\phi_i\,\d V+ \int\phi_iV\phi_j\,\d V\right)q_j = \left(\int E\phi_j\phi_i\,\d V\right)q_j +\oint{\hbar^2\over2m}{\d\psi\over\d n}\phi_i\,\d S\,,  \label{fem}
+Find a function $\psi\in\S$ such that 
+\begin{equation}\label{w}
+  \int_{\Omega}{\hbar^2\over2m}\nabla\psi\cdot\nabla v\,\d V=\int_{\Omega}(E-V)\psi
+v\,\d V\ \ \ \mbox{for every} \ v \in \S.
 \end{equation}
-which can be written in a matrix form
-\begin{equation*}
-  \left(K_{ij}+V_{ij}\right)q_j=EM_{ij}q_j+F_i\,,
-\end{equation*}
+Here, $\S$ is a subspace of the standard Sobolev space $H^1(\Omega)$ 
+corresponding to zero Dirichlet boundary conditions on $\Gamma$, i.e.,
+$$
+\S = \{v \in H^1(\Omega); \; v = 0 \ \mbox{on} \ \Gamma   \}.
+$$
+Recall that the function space $H^1(\Omega)$ consists of all functions defined in $\Omega$
+which are square-integrable and have square-integrable (weak) gradients.
+
+\subsection{Finite Element Method}
+
+The domain $\Omega$ is covered with a finite element mesh consisting of $M$ 
+non-overlapping triangles (in 2D) or tetrahedra (in 3D) $K_1, K_2, \ldots, K_M$. 
+Any two elements can only share a common vertex, a common edge (along with the corresponding pair of 
+vertices), or a common face (along with the edges and vertices corresponding to that face).
+
+The finite element approximation takes place in a finite-dimensional subspace $S_n \subset \S$ 
+consisting of continuous functions defined in $\Omega$ which are linear within every element $K_m$,
+$m = 1, 2, \ldots, M$.
+Let $\phi_i$, $i = 1, 2, \ldots, n$ be a basis of $\S_n$. The approximate solution 
+$\psi$ is sought as a linear combination of these basis functions with 
+unknown coefficients,
+$$
+\psi=\sum q_j\phi_j.
+$$
+Substituting this expansion into (\ref{w}) and using the basis functions 
+$\phi_i$, $i = 1, 2, \ldots, n$ in place of the test function $v$, we
+obtain a discrete problem
+\begin{equation}
+  \left(\int_{\Omega}{\hbar^2\over2m}\nabla\phi_j\cdot\nabla\phi_i\,\d V+
+\int_{\Omega}\phi_iV\phi_j\,\d V\right)q_j = \left(\int_{\Omega} E\phi_j\phi_i\,\d
+V\right)q_j.
+\label{fem}
+\end{equation}
+This can be written in a matrix form
+$$
+  \left(K_{ij}+V_{ij}\right)q_j=EM_{ij}q_j\,,
+$$
 where
 \begin{eqnarray*}
-V_{ij}&=&\int\phi_iV\phi_j\,\d V\,, \\
-M_{ij}&=&\int\phi_i\phi_j\,\d V\,, \\
-K_{ij}&=&{\hbar^2\over2m}\int\nabla\phi_i\cdot\nabla\phi_j\,\d V\,, \\
-F_i&=&{\hbar^2\over2m}\oint{\d\psi\over\d n}\phi_i\,\d S\,. \\
+V_{ij}&=&\int_{\Omega}\phi_iV\phi_j\,\d V\,, \\
+M_{ij}&=&\int_{\Omega}\phi_i\phi_j\,\d V\,, \\
+K_{ij}&=&{\hbar^2\over2m}\int_{\Omega}\nabla\phi_i\cdot\nabla\phi_j\,\d V\,.
+%F_i&=&{\hbar^2\over2m}\oint{\d\psi\over\d n}\phi_i\,\d S\,. \\
 \end{eqnarray*}
- Usually we set $F_i=0$.
+The integrals in (\ref{fem}) are evaluated via element contributions 
+over $K_1, K_2, \ldots, K_M$. For example,
+$$
+  K_{ij}=\sum_{m=1}^M K_{ij}^{(m)},
+$$
+where 
+$$
+  K_{ij}^{(m)}=\int_{K_m}{\hbar^2\over2m}\nabla\phi_j\cdot\nabla\phi_i\,\d
+V^{E}\approx \sum_{q=0}^{N_q-1}{\hbar^2\over2m}\,\nabla\phi_i(x_q)\cdot\nabla\phi_j(x_q)\,
+w_q|\det J(\hat x_q)|\,.
+$$
+The integral is computed numerically using the Gauss integration
+technique: $x_q$
+are Gauss points (there are $N_q$ of them), $w_q$ is the weight of
+each point, and the Jacobian $|\det J(\hat x_q)|$ is there because we
+are actually computing the integral on the reference element instead
+in the real space. It is worth mentioning that for both triangular 
+elements in 2D and tetrahedra in 3D, the Jacobian is constant.
+%The surface integrals are computed similarly.
 
-We decompose the domain into elements and compute the integrals as the sum over elements. For example:
-\begin{equation*}
-  K_{ij}=\sum_{E\in elements} K_{ij}^E
-\end{equation*}
-where $K_{ij}^E$ is the integral over one element only
-\begin{equation*}
-  K_{ij}^{E}=\int{\hbar^2\over2m}\nabla\phi_j\cdot\nabla\phi_i\,\d V^{E}\approx \sum_{q=0}^{N_q-1}{\hbar^2\over2m}\,\nabla\phi_i(x_q)\cdot\nabla\phi_j(x_q)\, w_q|\det J(\hat x_q)|\,.
-\end{equation*}
-The integral is computed numerically using a Gauss integration: $x_q$ are Gauss points (there are $N_q$ of them), $w_q$ is the weight of each point, and the Jacobian $|\det J(\hat x_q)|$ is there because we are actually computing the integral on the reference element instead in the real space.
-The surface integrals are computed similarly.
+%The decomposition into elements is done using a so called finite element mesh
+%and the type of the mesh and the basis (e.g. linear, quadratic
+%polynomials, higher order polynomials) establishes the function space $\S$ from
+%the weak formulation (\ref{w}). In our case, we have a Dirichlet boundary
+%condition that fixes the function value of all eigenvectors to 0 at the
+%boundary.
 
-The decomposition into elements is done using a so called finite element mesh
-and the type of the mesh and the basis (e.g. linear, quadratic
-polynomials, higher order polynomials) establishes the function space $\S$ from
-the weak formulation (\ref{w}). In our case, we have a Dirichlet boundary
-condition that fixes the function value of all eigenvectors to 0 at the
-boundary.
-
-Finite elements programs usually have an assembly phase, where they need to
-assemble all the global matrices, in our case:
-\begin{equation*}
-  \left(K_{ij}+V_{ij}\right)q_j=EM_{ij}q_j+F_i\,,
-\end{equation*}
-and then a solve phase, in our case this amounts to solve a large sparse
+Finite elements programs usually have an assembly phase, where they
+construct all the matrices, in our case:
+$$
+  \left(K_{ij}+V_{ij}\right)q_j=EM_{ij}q_j\,,
+$$
+and then a solve phase. In our case this amounts to solving a large sparse
 generalized eigenvalue problem.
