KB -> Kleinman-Bylander

--- a/master.bib
+++ b/master.bib
@@ -289,3 +289,12 @@
     PAGES="191-199",
     NOTE="\url{http://physics.nist.gov/PhysRefData/DFTdata/contents.html}"
 }
+
+@ARTICLE{kleinman-bylander,
+    AUTHOR="L. Kleinman and D. M. Bylander",
+    TITLE="Efficacious Form for Model Pseudopotentials",
+    JOURNAL=PRL,
+    VOLUME=48,
+    YEAR=1982,
+    PAGES="1425-1428",
+}
