--- a/theory.tex
+++ b/theory.tex
@@ -854,7 +854,12 @@ We diagonalize the matrix $U$ by choosing such functions $\ket{\bar\phi_i}$ for 
 \begin{equation}
   v =\sum_{i}v\ket{\bar\phi_i}{1\over\braket{\bar\phi_i|v|\bar\phi_i}} \bra{\bar\phi_i}v =\sum_{i}v\ket{\bar\phi_i}\bra{\bar\phi_i}v  \label{vsep}
 \end{equation}
-We could take any $\ket{\phi_i}$ and orthogonalize them. But because we have $v$ in the form of (\ref{semi}), we will be using $\ket{\phi_i}$ in the form $\ket{\phi_i}=\ket{R_{nl}}\ket{lm}$, because it turns out we will only need to orthogonalize the radial parts. The first term in (\ref{vsep}) then corresponds to the KB potential. We of course take more terms and get accurate results without ghost states.
+We could take any $\ket{\phi_i}$ and orthogonalize them. But because we have
+$v$ in the form of (\ref{semi}), we will be using $\ket{\phi_i}$ in the form
+$\ket{\phi_i}=\ket{R_{nl}}\ket{lm}$, because it turns out we will only need to
+orthogonalize the radial parts. The first term in (\ref{vsep}) then corresponds
+to the Kleinman-Bylander potential\cite{kleinman-bylander}. We of course take more terms and get
+accurate results without ghost states.
 
 Let's look at the orthogonalization. We start with the wavefunctions: 
 \begin{equation*}
