--- a/introduction.tex
+++ b/introduction.tex
@@ -25,4 +25,4 @@ potentials in relativistic and nonrelativistic DFT and for 2D and 3D
 Schr\"odinger equation for symmetric and non-symmetric potentials.
 
 Finally the appendix contains some useful derivations and explanations like
-delta functions, variations, functional derivatives, dirac notation and more.
+delta functions, variations, functional derivatives, Dirac notation and more.
