typos in motivation fixed.

--- a/motivation.tex
+++ b/motivation.tex
@@ -14,9 +14,9 @@ described in a next section and results presented in the Result's section.
 Another ingredient is a robust finite element solver for a one particle
 Schr\"odinger equation. We wrote a very general solver that works both in 2D
 and 3D and can solve the eigenproblem for any potential accurately and
-reliably. We calculated many well known solution in 2D and 3D (for spherically
-symmetric problems) and checked with analytical solution to be sure the solver
-works well. We then also calculated a couple nonsymmetric problems in 2D to
+reliably. We calculated many well known solutions in 2D and 3D (for spherically
+symmetric problems) and checked with analytical solutions to be sure the solver
+works well. We then also calculated a couple of nonsymmetric problems in 2D to
 show the usefulness of our solver -- those are unique results that are quite
 difficult to get using other means -- our solver solves symmetric and
 nonsymmetric problems with ease.
