--- a/motivation.tex
+++ b/motivation.tex
@@ -70,7 +70,7 @@ section 4.2 for results of calculations for Boron and Lead.
 
 Ab-inito pseudopotentials \cite{pickett} considerably improve the efficiency of
 electronic structure calculations of complex systems by separating (and
-treating in different way) the core and valence electrons, howsoever we define
+treating in different way) the core and valence electrons, however we define
 them.  Using the modern, ab-initio environment reflecting pseudopotentials
 \cite{vackarAEPP2} in fact does not represent any additional approximation
 except for linearizing the density functional approach with respect to
